Minor CV update

--- a/cv.tex
+++ b/cv.tex
@@ -17,7 +17,7 @@
 
 \usepackage[utf8]{inputenc}
 
-\usepackage[left=2cm, right=2cm, top=2cm]{geometry}
+\usepackage[left=2cm, right=2cm, top=1.7cm]{geometry}
 
 \usepackage{import}
 
@@ -37,7 +37,9 @@
 
 \vspace{-20pt}
 
-I'm a software engineer with more than six years of professional experience building bespoke mobile applications, web applications, and back-end software systems. I have experience working within and leading scrum development teams working on several projects for a wide variety of clients. I have released several open-source software projects in my personal capacity. I have been closely involved with technical training programmes for developers.\\
+I'm a software engineer with more than six years of professional experience building bespoke mobile applications, web applications, and back-end software systems. I have experience working within and leading scrum development teams working on several projects for a wide variety of clients. In my personal capacity, I have released several open-source software projects. I have been closely involved with technical training programmes for developers.\\
+
+\vspace{-4pt}
 
 \section{Professional experience}
 
@@ -61,6 +63,14 @@ I'm a software engineer with more than six years of professional experience buil
 \begin{itemize}
 \item Working in small developments teams, sometimes as a technical lead.
 \item Performing code review with team members.
+\end{itemize}
+}}
+
+\vspace{4pt}
+
+\item{\cventry{June 2014 -- August 2014}{Software Development Intern}{Kalahari}{Cape Town, South Africa}{}{\vspace{3pt}
+\begin{itemize}
+\item Working on a small front-end project in a team with other interns.
 \end{itemize}
 }}
 
@@ -118,7 +128,9 @@ I'm a software engineer with more than six years of professional experience buil
 
 \begin{itemize}
 
-\item Andrew La Grange, Managing Director of Full Stack: andrew.lagrange@fullstack.co.za.
+\item Andrew La Grange, Managing Director, Full Stack: andrew.lagrange@fullstack.co.za
+\item Werner Visser, Director, Full Stack: werner.visser@fullstack.co.za
+\item Herculaas van Heerden, Director, Full Stack: herculaas.vanheerden@fullstack.co.za
 
 \end{itemize}
 
