Update CV, add letter of recommendation

--- a/cv.tex
+++ b/cv.tex
@@ -39,11 +39,11 @@
 
 I'm a software engineer with more than six years of professional experience building bespoke mobile applications, web applications, and back-end software systems. I have experience working within and leading scrum development teams working on several projects for a wide variety of clients. In my personal capacity, I have released several open-source software projects. I have been closely involved with technical training programmes for developers.\\
 
-\vspace{-4pt}
+\vspace{-12pt}
 
 \section{Professional experience}
 
-\vspace{4pt}
+\vspace{3pt}
 
 \begin{itemize}
 
@@ -57,7 +57,7 @@ I'm a software engineer with more than six years of professional experience buil
 \end{itemize}
 }}
 
-\vspace{4pt}
+\vspace{3pt}
 
 \item{\cventry{August 2014 -- November 2018}{Software Developer}{Full Stack}{Cape Town, South Africa}{}{\vspace{3pt}
 \begin{itemize}
@@ -66,7 +66,7 @@ I'm a software engineer with more than six years of professional experience buil
 \end{itemize}
 }}
 
-\vspace{4pt}
+\vspace{3pt}
 
 \item{\cventry{June 2014 -- August 2014}{Software Development Intern}{Kalahari}{Cape Town, South Africa}{}{\vspace{3pt}
 \begin{itemize}
@@ -78,7 +78,7 @@ I'm a software engineer with more than six years of professional experience buil
 
 \section{Education}
 
-\vspace{4pt}
+\vspace{3pt}
 
 \begin{itemize}
 
@@ -124,13 +124,16 @@ I'm a software engineer with more than six years of professional experience buil
 
 \section{References}
 
-\vspace{4pt}
+\vspace{3pt}
 
 \begin{itemize}
 
-\item Andrew La Grange, Managing Director, Full Stack: andrew.lagrange@fullstack.co.za
-\item Werner Visser, Director, Full Stack: werner.visser@fullstack.co.za
-\item Herculaas van Heerden, Director, Full Stack: herculaas.vanheerden@fullstack.co.za
+\item Andrew La Grange, Managing Director, Full Stack: \href{mailto:andrew.lagrange@fullstack.co.za}{andrew.lagrange@fullstack.co.za}
+\begin{itemize}
+\item or see my letter of recommendation from Andrew at \href{https://lukepothier.com/files/lor.pdf}{lukepothier.com/files/lor.pdf}
+\end{itemize}
+\item Werner Visser, Director, Full Stack: \href{mailto:werner.visser@fullstack.co.za}{werner.visser@fullstack.co.za}
+\item Herculaas van Heerden, Director, Full Stack: \href{mailto:herculaas.vanheerden@fullstack.co.za}{herculaas.vanheerden@fullstack.co.za}
 
 \end{itemize}
 
