--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
 
 \vspace{-20pt}
 
-I'm a software engineer with more than six years of professional experience building bespoke mobile applications, web applications, and back-end software systems. I have experience working within and leading scrum development teams working on several projects for a wide variety of clients. In my personal capacity, I have released several open-source software projects. I have been closely involved with technical training programmes for developers.\\
+I'm a software engineer with several years of professional experience building bespoke web applications, mobile applications, and back-end software systems. I have experience working within and leading scrum development teams working on several projects for a wide variety of clients. In my personal capacity, I have released several open-source software projects. I have been closely involved with technical training programmes for developers.\\
 
 \vspace{-12pt}
 
@@ -46,6 +46,15 @@ I'm a software engineer with more than six years of professional experience buil
 \vspace{3pt}
 
 \begin{itemize}
+
+\item{\cventry{December 2020 -- }{Senior Backend Engineer}{cargo.one}{Berlin, Germany (fully remote from Cape Town, South Africa)}{}{\vspace{3pt} 
+\begin{itemize}
+\item Working with a fully remote engineering team on the cargo.one air cargo platform.
+\item Various technical responsibilities including developing the web application and integrating with external airline systems.
+\end{itemize}
+}}
+
+\vspace{3pt}
 
 \item{\cventry{November 2018 -- August 2020}{Head of Development}{Full Stack}{Cape Town, South Africa}{}{\vspace{3pt} 
 \begin{itemize}
@@ -88,39 +97,11 @@ I'm a software engineer with more than six years of professional experience buil
 
 \vspace{2pt}
 
-\section{Languages}
+\section{Technologies}
 
 \vspace{1pt}
 
-\begin{itemize}
-
-\item \textbf{C\#:} Expert 
-
-\vspace{1pt}
-
-\item \textbf{Java:} Proficient 
-
-\vspace{1pt}
-
-\item \textbf{JavaScript/TypeScript:} Proficient 
-
-\vspace{1pt}
-
-\item \textbf{HTML/CSS:} Proficient 
-
-\vspace{1pt}
-
-\item \textbf{SQL:} Proficient 
-
-\vspace{1pt}
-
-\item \textbf{Kotlin:} Capable 
-
-\vspace{1pt}
-
-\item \textbf{Python:} Capable 
-
-\end{itemize}
+I have several years of experience with several languages and technologies, including: C\#, Python, Java, Kotlin, Bash, JavaScript, Angular, Vue, HTML, CSS, SQL Server, Postgres, Git, Azure, Google Cloud, AWS, Docker, Kubernetes, Xamarin, Android, iOS, gRPC, Protobufs, among several others.
 
 \section{References}
 
@@ -132,8 +113,6 @@ I'm a software engineer with more than six years of professional experience buil
 \begin{itemize}
 \item or see my letter of recommendation from Andrew at \href{https://lukepothier.com/files/lor.pdf}{lukepothier.com/files/lor.pdf}
 \end{itemize}
-\item Werner Visser, Director, Full Stack: \href{mailto:werner.visser@fullstack.co.za}{werner.visser@fullstack.co.za}
-\item Herculaas van Heerden, Director, Full Stack: \href{mailto:herculaas.vanheerden@fullstack.co.za}{herculaas.vanheerden@fullstack.co.za}
 
 \end{itemize}
 
